# deepdi.sh

./: .gitignore  .mise.toml  bacon.toml  compose.yaml  config.alloy  mprocs.yaml  otel-collector.yaml
.sqlx/: query-412ef566a1da2bb1ec1268e2b8609a8d5696510ca1bacf054e44992ff3c84d69.json  query-46fab84fcb97000fd3e9314489480455755826ea49f352c1492a934d29819624.json  query-8e448b399ce307586fcaf31f81438ba8d03f8e6bda6dc2f64712bb36437b55d3.json  query-e5707e536ec9b800102f80c4b60df08b848295d918dd6ca955106cabc9b065a1.json
auth/: package.json
authentication/: README.md
backend/: Cargo.toml
backend/queries/recipes/: get_all_recipes.sql  get_ingredients_for_many_recipes.sql  get_recipe.sql
backend/src/: configuration.rs  main.rs  tracing.rs
backend/src/api/: mod.rs
backend/src/api/middleware/: mod.rs  trace_extractor.rs
backend/src/api/routes/ingredients/: all_ingredients.rs  create_ingredient.rs  delete_ingredient.rs  get_ingredient_by_id.rs
backend/src/api/routes/recipes/: all_recipes.rs  mod.rs
backend/src/domain/: mod.rs  utils.rs
backend/src/domain/commands/ingredients/create/: mod.rs
backend/src/domain/commands/ingredients/create/tests/: __tests__.rs  mod.rs
backend/src/domain/commands/ingredients/delete/: mod.rs
backend/src/domain/commands/ingredients/delete/tests/: __tests__.rs  mod.rs
backend/src/domain/entities/recipe/: mod.rs  tests.rs
backend/src/domain/queries/recipes/: mod.rs
backend/src/domain/queries/recipes/get_all/: mod.rs
backend/src/domain/repositories/ingredients/: mod.rs
backend/src/domain/repositories/recipe/: in_memory.rs  mod.rs  postgres.rs
backend/src/domain/repositories/recipe/errors/: get.rs
backend/src/domain/services/message/: kafka.rs  mod.rs  stub.rs
backend/tests/ingredients/: delete.rs  insert.rs
backend/tests/recipes/: create.rs  delete.rs  get_by_id.rs  update.rs
backend/tests/recipes/ingredients/: add.rs  delete.rs  update.rs
backend/tests/setup/: mod.rs
common/: index.ts  package.json
frontend-old/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
(+40 files in other folders)
